apps/base/redirector/resources/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-allowlist
  namespace: redirector
spec:
  ipAllowList:
    sourceRange:
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
