apps/base/redirector/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    pod-security.kubernetes.io/enforce: baseline # TODO: restricted
    pod-security.kubernetes.io/warn: restricted
  name: redirector
