apps/base/redirector/resources/peerauthentication.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: redirector
spec:
  mtls:
    mode: STRICT
