apps/base/redirector/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirector
  namespace: redirector
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: redirector
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: nginx
      labels:
        app: redirector
    spec:
      containers:
        - image: nginx:1.31.2-alpine-otel
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nginx
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 1m
              memory: 11Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: config
              subPath: nginx.conf
            - mountPath: /etc/nginx/redirect.js
              name: config
              subPath: redirect.js
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/cache/nginx
              name: cache
      imagePullSecrets:
        - name: dockerconfig
      securityContext:
        fsGroup: 101
        runAsGroup: 101
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - emptyDir: {}
          name: cache
        - name: config
          secret:
            secretName: redirector-nginx
        - emptyDir:
            medium: Memory
            sizeLimit: 1Mi
          name: tmp
