apps/base/redirector/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redirector
  namespace: redirector
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: redirector
  type: ClusterIP
