apps/base/redirector/resources/ingressroute.yaml
# yamllint disable rule:line-length
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirector
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`www.ft.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
    - kind: Rule
      match: Host(`www.google.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: redirector-tls
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: google
#   namespace: redirector
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`www.google.com`)
#       middlewares:
#         - name: ip-allowlist
#       services:
#         - name: redirector
#           port: 80
#   tls:
#     secretName: google-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: instagram
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`instagram.com`) || Host(`www.instagram.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: instagram-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: medium
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`medium.com`) || HostRegexp(`^.+\.medium\.com$`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: medium-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: reddit
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`out.reddit.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: reddit-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: skimresources
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`go.skimresources.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: skimresources-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tiktok
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tiktok.com`) || Host(`vm.tiktok.com`) || Host(`www.tiktok.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: tiktok-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: twitter
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`twitter.com`) || Host(`www.twitter.com`) || Host(`www.x.com`) || Host(`x.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: twitter-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: youtube
  namespace: redirector
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`youtu.be`) || Host(`www.youtube.com`) || Host(`youtube.com`)
      middlewares:
        - name: ip-allowlist
      services:
        - name: redirector
          port: 80
  tls:
    secretName: youtube-tls
